<resources>
    <string name="app_name">YouNote</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">password…</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="welcome_please_sign_in_or_register">Welcome! Please Sign in or Register!</string>
    <string name="loginBtn">Login</string>
    <string name="login">Login</string>
    <string name="already_a_member_log_in">Already A member? Log in!</string>
    <string name="button">Button</string>
    <string name="loginEmail">email</string>
    <string name="title_activity_home">Home</string>
    <string name="account">Account</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="back">Back</string>
    <string name="view_notes">View Notes</string>
    <string name="new_note">New note</string>
    <string name="action_search">action_search</string>
    <string name="enter_new_phone">Enter new phone</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="change_details">Change details</string>
    <string name="enter_your_new_details_in_the_fields_below">Enter your new details in the fields below</string>
    <string name="name">Name</string>
    <string name="welcome_use_the_buttons_below_to_view_add_notes">Welcome! Use the buttons below to view/add notes!</string>
</resources>